--- a/Conjugate/Base.lproj/Main.storyboard
+++ b/Conjugate/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12100" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12072"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -289,18 +289,18 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UPp-MT-Cdy" id="RR2-b1-8yD">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="54"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="54.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qEq-up-d9d">
-                                                    <rect key="frame" x="15" y="9" width="37" height="21"/>
+                                                    <rect key="frame" x="15" y="10" width="36.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hmT-R9-fNw">
-                                                    <rect key="frame" x="15" y="30" width="33" height="15"/>
+                                                    <rect key="frame" x="15" y="30.5" width="33" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.20286800986842105" alpha="1" colorSpace="calibratedWhite"/>
@@ -481,56 +481,101 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xyg-Wa-c0Y">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="55" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xyg-Wa-c0Y">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="w5j-hp-nId">
+                                    <rect key="frame" x="0.0" y="128.5" width="375" height="216"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="berlin_skyline" translatesAutoresizingMaskIntoConstraints="NO" id="8YK-8v-Fdi">
+                                            <rect key="frame" x="0.0" y="88" width="375" height="128"/>
+                                            <color key="tintColor" red="0.81258264137673253" green="0.81258264137673253" blue="0.81258264137673253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="128" id="yfe-mz-jkH"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K9H-P6-0k7">
+                                            <rect key="frame" x="40" y="20" width="295" height="48"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="48" id="5hs-jF-d9g"/>
+                                            </constraints>
+                                            <attributedString key="attributedText">
+                                                <fragment content="Footer">
+                                                    <attributes>
+                                                        <color key="NSColor" red="0.56862745098039214" green="0.56862745098039214" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <font key="NSFont" metaFont="system" size="17"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="2sL-ip-dNw" id="ib7-8G-CiT"/>
+                                            </connections>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="8YK-8v-Fdi" secondAttribute="bottom" id="1zI-nS-TfK"/>
+                                        <constraint firstAttribute="trailing" secondItem="8YK-8v-Fdi" secondAttribute="trailing" id="AEQ-i8-1IW"/>
+                                        <constraint firstItem="K9H-P6-0k7" firstAttribute="leading" secondItem="w5j-hp-nId" secondAttribute="leading" constant="40" id="Put-3I-3mU"/>
+                                        <constraint firstItem="K9H-P6-0k7" firstAttribute="top" secondItem="w5j-hp-nId" secondAttribute="top" constant="20" id="WLo-zq-bXv"/>
+                                        <constraint firstItem="8YK-8v-Fdi" firstAttribute="leading" secondItem="w5j-hp-nId" secondAttribute="leading" id="eiq-Hg-i85"/>
+                                        <constraint firstAttribute="trailing" secondItem="K9H-P6-0k7" secondAttribute="trailing" constant="40" id="nY3-Zs-8qo"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsCell" rowHeight="55" id="gFJ-Ik-gOr" customClass="SettingsCell" customModule="Conjugate" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gFJ-Ik-gOr" id="ia4-hZ-zvS">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Report a bug" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Vz-NU-pBq">
+                                                    <rect key="frame" x="49" y="0.0" width="99.5" height="55"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reportBug" translatesAutoresizingMaskIntoConstraints="NO" id="wtT-f0-7hW">
+                                                    <rect key="frame" x="13" y="17.5" width="21" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="CLo-2A-RDC"/>
+                                                        <constraint firstAttribute="width" constant="21" id="OY0-Nj-PEa"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wtT-f0-7hW" firstAttribute="leading" secondItem="ia4-hZ-zvS" secondAttribute="leadingMargin" constant="5" id="5md-MI-CO2"/>
+                                                <constraint firstItem="7Vz-NU-pBq" firstAttribute="leading" secondItem="wtT-f0-7hW" secondAttribute="trailing" constant="15" id="OxM-Vg-9Vf"/>
+                                                <constraint firstAttribute="bottom" secondItem="7Vz-NU-pBq" secondAttribute="bottom" id="a4r-Gi-lfm"/>
+                                                <constraint firstItem="wtT-f0-7hW" firstAttribute="centerY" secondItem="ia4-hZ-zvS" secondAttribute="centerY" id="w15-yj-yYz"/>
+                                                <constraint firstItem="7Vz-NU-pBq" firstAttribute="top" secondItem="ia4-hZ-zvS" secondAttribute="top" id="zlG-YJ-qnj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="leftImageView" destination="wtT-f0-7hW" id="uOR-35-RDi"/>
+                                            <outlet property="titleLabel" destination="7Vz-NU-pBq" id="h8M-az-f68"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="berlin_skyline" translatesAutoresizingMaskIntoConstraints="NO" id="8YK-8v-Fdi">
-                                <rect key="frame" x="0.0" y="490" width="375" height="128"/>
-                                <color key="tintColor" red="0.81258264137673253" green="0.81258264137673253" blue="0.81258264137673253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="oMT-s4-fhG"/>
-                                </constraints>
-                            </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K9H-P6-0k7">
-                                <rect key="frame" x="20" y="422" width="335" height="48"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="H6c-Ii-sba"/>
-                                </constraints>
-                                <attributedString key="attributedText">
-                                    <fragment content="Footer">
-                                        <attributes>
-                                            <color key="NSColor" red="0.56862745098039214" green="0.56862745098039214" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" metaFont="system" size="17"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="2sL-ip-dNw" id="ib7-8G-CiT"/>
-                                </connections>
-                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8YK-8v-Fdi" firstAttribute="leading" secondItem="mT7-8U-owa" secondAttribute="leading" id="1g9-rY-G3x"/>
                             <constraint firstItem="xyg-Wa-c0Y" firstAttribute="top" secondItem="mT7-8U-owa" secondAttribute="top" id="406-pg-gcx"/>
                             <constraint firstItem="xyg-Wa-c0Y" firstAttribute="leading" secondItem="mT7-8U-owa" secondAttribute="leading" id="96Z-jb-Iba"/>
                             <constraint firstAttribute="trailing" secondItem="xyg-Wa-c0Y" secondAttribute="trailing" id="BOU-Si-k40"/>
-                            <constraint firstItem="qHy-kc-YY3" firstAttribute="top" secondItem="8YK-8v-Fdi" secondAttribute="bottom" id="C7C-Ij-SNS"/>
                             <constraint firstItem="qHy-kc-YY3" firstAttribute="top" secondItem="xyg-Wa-c0Y" secondAttribute="bottom" id="iL4-2E-dsQ"/>
-                            <constraint firstItem="8YK-8v-Fdi" firstAttribute="top" secondItem="K9H-P6-0k7" secondAttribute="bottom" constant="20" id="kMD-pQ-c8m"/>
-                            <constraint firstAttribute="trailing" secondItem="8YK-8v-Fdi" secondAttribute="trailing" id="kVC-LI-Ztf"/>
-                            <constraint firstAttribute="trailing" secondItem="K9H-P6-0k7" secondAttribute="trailing" constant="20" id="sWk-nV-x0c"/>
-                            <constraint firstItem="K9H-P6-0k7" firstAttribute="leading" secondItem="mT7-8U-owa" secondAttribute="leading" constant="20" id="tEL-15-Ryv"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AD1-Ic-xEm"/>
                     <connections>
-                        <outlet property="footerTextView" destination="K9H-P6-0k7" id="NXX-nW-Wl5"/>
+                        <outlet property="footerTextView" destination="K9H-P6-0k7" id="uyv-Pl-Ytn"/>
                         <outlet property="skylineImageView" destination="8YK-8v-Fdi" id="AGo-g2-Mlo"/>
                         <outlet property="tableView" destination="xyg-Wa-c0Y" id="FCX-7k-bPg"/>
                     </connections>
@@ -544,6 +589,7 @@
         <image name="berlin_skyline" width="687" height="259"/>
         <image name="conjugate_tab" width="30" height="30"/>
         <image name="de_flag" width="300" height="300"/>
+        <image name="reportBug" width="18" height="18"/>
         <image name="sad_face" width="181" height="181"/>
         <image name="second" width="30" height="30"/>
         <image name="share" width="19" height="27"/>
