--- a/Conjugate/Base.lproj/Main.storyboard
+++ b/Conjugate/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12100" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12072"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -466,7 +466,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="w5j-hp-nId">
-                                    <rect key="frame" x="0.0" y="183.5" width="375" height="216"/>
+                                    <rect key="frame" x="0.0" y="184" width="375" height="216"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="berlin_skyline" translatesAutoresizingMaskIntoConstraints="NO" id="8YK-8v-Fdi">
@@ -622,11 +622,11 @@
                         <viewControllerLayoutGuide type="bottom" id="D0d-fp-ehg"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="wda-sY-4Cu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="420"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="55" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="hz7-hV-yb4">
-                                <rect key="frame" x="0.0" y="20" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="370"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LanguageCell" rowHeight="55" id="dH5-Ne-srz" customClass="LanguageCell" customModule="Conjugate" customModuleProvider="target">
@@ -677,7 +677,7 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCA-I5-WR7">
-                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="370" width="375" height="50"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="u1M-Re-Sfc"/>
@@ -706,12 +706,16 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MwM-5g-FLA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2676" y="1092.5037481259371"/>
+            <point key="canvasLocation" x="4793" y="1305"/>
         </scene>
         <!--Tabbed Menu View Controller-->
         <scene sceneID="ZqE-ra-ypv">
             <objects>
                 <viewController id="IIW-lN-sfS" customClass="TabbedMenuViewController" customModule="Conjugate" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EEb-dP-Mfs"/>
+                        <viewControllerLayoutGuide type="bottom" id="0xs-RH-Uip"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="B9w-hv-ts7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -726,6 +730,10 @@
         <scene sceneID="gDL-Ib-Hag">
             <objects>
                 <viewController id="aZI-D3-i6f" customClass="TabbedContentViewController" customModule="Conjugate" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PwI-TK-dqG"/>
+                        <viewControllerLayoutGuide type="bottom" id="KbY-h7-M7m"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XH8-ph-0XL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -735,6 +743,68 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RBu-cI-T7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3647" y="698"/>
+        </scene>
+        <!--Onboarding Language Selection View Controller-->
+        <scene sceneID="nmK-NE-I9K">
+            <objects>
+                <viewController storyboardIdentifier="OnboardingLanguageSelectionViewController" id="wpr-qP-kDv" customClass="OnboardingLanguageSelectionViewController" customModule="Conjugate" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VO4-5V-zRE"/>
+                        <viewControllerLayoutGuide type="bottom" id="yEp-iL-VFh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="a6j-R9-Iuv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="konj.me" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VwY-4g-jHC">
+                                <rect key="frame" x="0.0" y="70" width="375" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="3il-XZ-FKr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <color key="textColor" red="0.39215686274509803" green="0.68627450980392157" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="highlightedColor" red="1" green="0.19095288469999999" blue="0.2976018003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YS1-gh-Pf1">
+                                <rect key="frame" x="0.0" y="247" width="375" height="420"/>
+                                <connections>
+                                    <segue destination="ZSU-IU-nwW" kind="embed" identifier="languageSelectionSegue" id="560-Eo-Kvf"/>
+                                </connections>
+                            </containerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please select a language you want to conjugate in" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hWD-fC-ekC">
+                                <rect key="frame" x="36" y="167" width="302" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="ihR-ZM-vOt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="VwY-4g-jHC" firstAttribute="centerY" secondItem="a6j-R9-Iuv" secondAttribute="centerY" priority="250" id="5ZK-Tz-wdI"/>
+                            <constraint firstAttribute="trailing" secondItem="YS1-gh-Pf1" secondAttribute="trailing" id="5vh-fa-NTf"/>
+                            <constraint firstItem="YS1-gh-Pf1" firstAttribute="top" secondItem="hWD-fC-ekC" secondAttribute="bottom" constant="13" id="EfZ-WH-7ar"/>
+                            <constraint firstAttribute="trailing" secondItem="VwY-4g-jHC" secondAttribute="trailing" id="FQ8-0Z-6UI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hWD-fC-ekC" secondAttribute="trailing" constant="21" id="SAY-Uq-mbE"/>
+                            <constraint firstItem="VwY-4g-jHC" firstAttribute="top" secondItem="VO4-5V-zRE" secondAttribute="bottom" constant="50" id="aG2-yf-blj"/>
+                            <constraint firstItem="YS1-gh-Pf1" firstAttribute="leading" secondItem="a6j-R9-Iuv" secondAttribute="leading" id="c9v-tZ-Ek1"/>
+                            <constraint firstItem="yEp-iL-VFh" firstAttribute="top" secondItem="YS1-gh-Pf1" secondAttribute="bottom" id="ewv-jB-k23"/>
+                            <constraint firstItem="VwY-4g-jHC" firstAttribute="leading" secondItem="a6j-R9-Iuv" secondAttribute="leading" id="fRs-oW-HCf"/>
+                            <constraint firstItem="hWD-fC-ekC" firstAttribute="leading" secondItem="a6j-R9-Iuv" secondAttribute="leadingMargin" constant="20" id="iS1-Fw-JcG"/>
+                            <constraint firstItem="hWD-fC-ekC" firstAttribute="top" secondItem="VwY-4g-jHC" secondAttribute="bottom" constant="32" id="trw-Mx-DKr"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="introTextLabel" destination="hWD-fC-ekC" id="ncL-Od-k8I"/>
+                        <outlet property="languageSelectionView" destination="YS1-gh-Pf1" id="5Zt-bD-u3z"/>
+                        <outlet property="logoLabel" destination="VwY-4g-jHC" id="RCa-3g-wSt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eGb-Ua-VUj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3645.5999999999999" y="1305.697151424288"/>
         </scene>
     </scenes>
     <resources>
